@@ -4,8 +4,11 @@ Changes since version 1.0.1
 - Compatibility fixes for GCC 2.96.
 
 - Added `option' and `vm-option' elements to IcePack server
-  descriptors. These elements are used to pass command line options 
-  to server processes.
+  descriptors. These elements are used to pass command line options to
+  server processes.
+
+- Added scandir() and alphasort() for Sun-OS and other Unix systems
+  that do not have these BSD calls.
 
 Changes since version 1.0.0
 ---------------------------
